# gbajam-2022

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: gba.yml
assets/: CMakeLists.txt  abyssal.xm  buyselltrade.mod  dreamy.mod  nogood.mod  png2tileset.nim
src/: CMakeLists.txt  common.c  common.h  gamestates.c  gamestates.h  intro.c  intro.h  main.c  menu.c  menu.h  types.h
